--- a/references.bib
+++ b/references.bib
@@ -1,23 +1,52 @@
-@inproceedings{BenHamadou:1986,
-  title={{A compression technique for Arabic dictionaries: the affix analysis}},
-  author={Ben Hamadou, Abdelmajid},
-  booktitle={Proceedings of the 11th Conference on Computational Linguistics},
-  pages={286--288},
-  year={1986},
-  organization={Association for Computational Linguistics}
+@article{Riedl_Biemann_2012, 
+   title={Text Segmentation with Topic Models}, 
+   volume={27}, 
+   DOI={10.21248/jlcl.27.2012.158}, 
+   number={1}, 
+   journal={Journal for Language Technology and Computational Linguistics}, 
+   author={Riedl, Martin and Biemann, Chris}, 
+   year={2012}, 
+   pages={47–69} 
+}
+
+@article{Jurish_Würzner_2013, 
+   title={Word and Sentence Tokenization with {H}idden {M}arkov {M}odels}, 
+   volume={28}, 
+   DOI={10.21248/jlcl.28.2013.176}, 
+   number={2}, 
+   journal={Journal for Language Technology and Computational Linguistics}, 
+   author={Jurish, Bryan and Würzner, Kay-Michael}, 
+   year={2013}, 
+   pages={61–83} 
+}
+   
+@article{Sidarenka_Peldszus_Stede_2015, 
+   title={Discourse Segmentation of German Texts}, 
+   volume={30}, 
+   DOI={10.21248/jlcl.30.2015.196}, 
+   number={1}, 
+   journal={Journal for Language Technology and Computational Linguistics}, 
+   author={Sidarenka, Uladzimir and Peldszus, Andreas and Stede, Manfred}, 
+   year={2015},  
+   pages={71–98} 
+}
+
+@inproceedings{aggarwal-zesch-2022-bye,
+    title = "Bye, Bye, Maintenance Work? Using Model Cloning to Approximate the Behavior of Legacy Tools",
+    author = "Aggarwal, Piush  and
+      Zesch, Torsten",
+    editor = "Schaefer, Robin  and
+      Bai, Xiaoyu  and
+      Stede, Manfred  and
+      Zesch, Torsten",
+    booktitle = "Proceedings of the 18th Conference on Natural Language Processing (KONVENS 2022)",
+    year = "2022",
+    address = "Potsdam, Germany",
+    publisher = "KONVENS 2022 Organizers",
+    pages = "175--180",
 }
 
 
-@article{El-Sadany-et-al:1989,
-  title={{An Arabic morphological system}},
-  author={El-Sadany, Tarek and Hashish, Mohamed},
-  journal={IBM Systems Journal},
-  volume={28},
-  number={4},
-  pages={600--612},
-  year={1989},
-  publisher={IBM}
-}
 
 @misc{URLtest,
   title={URL-test},
